@@ -30,8 +30,12 @@
 #include <arpa/inet.h>
 #endif
 
+/* Returns whether the last label in the name is a root label (a empty label).
+ * Note that it is not enough to just test the last character to be 0,
+ * because it may be part of the last label itself.
+ */
 static bool
-ldns_dname_has_root_label(const ldns_rdf* dname)
+ldns_dname_last_label_is_root_label(const ldns_rdf* dname)
 {
 	size_t src_pos;
 	size_t len = 0;
@@ -61,7 +65,7 @@ ldns_dname_cat_clone(const ldns_rdf *rd1, const ldns_rdf *rd2)
 	 * rd, by reducing the size with 1
 	 */
 	left_size = ldns_rdf_size(rd1);
-	if (ldns_dname_has_root_label(rd1)) {
+	if (ldns_dname_last_label_is_root_label(rd1)) {
 		left_size--;
 	}
 
@@ -98,7 +102,7 @@ ldns_dname_cat(ldns_rdf *rd1, ldns_rdf *rd2)
 	 * rd, by reducing the size with 1
 	 */
 	left_size = ldns_rdf_size(rd1);
-	if (ldns_dname_has_root_label(rd1)) {
+	if (ldns_dname_last_label_is_root_label(rd1)) {
 		left_size--;
 	}
 
@@ -140,7 +144,7 @@ ldns_dname_reverse(const ldns_rdf *dname)
 	
 	/* If dname ends in a root label, the reverse should too.
 	 */
-	if (ldns_dname_has_root_label(dname)) {
+	if (ldns_dname_last_label_is_root_label(dname)) {
 		buf[rd_size - 1] = 0;
 		rd_size -= 1;
 	}
