@@ -1,4 +1,6 @@
 1.6.14
+	* DANE support (RFC6698), including ldns-dane example tool.
+	* bugfix #473: Dead code removal and resource leak fix in drill
 	* bugfix #471: Let ldns_resolver_push_dnssec_anchor accept DS RR's too.
 	* Various bugfixes from code reviews from CZ.NIC and Paul Wouters
 	* ldns-notify TSIG option argument checking
@@ -13,7 +15,7 @@
 	* bugfix #459: Export only symbols defined in ldns_symbols
 	* bugfix #458: Track all newly created signatures when signing.
 	* bugfix #454: Only set -g and -O2 CFLAGS when no CFLAGS was given.
-	* bugfix #457: Memroy leak fix for ldns_key_new_frm_algorithm.
+	* bugfix #457: Memory leak fix for ldns_key_new_frm_algorithm.
 	* pyldns memory handling fixes and the python3/ldns-signzone.py
 	  examples script contribution from Karel Slany.
 	* bugfix #450: Base # bytes for P, G and Y (T) on the guaranteed
@@ -27,7 +29,6 @@
 	* New -p option for ldns-read-zone to prepend-pad SOA serial to take
 	  up ten characters.
 	* Return error if printing RR fails due to unknown/null RDATA.
-	* New TLSA support (draft-ietf-dane-protocol).
 
 1.6.13	2012-05-21
 	* New -S option for ldns-verify-zone to chase signatures online.
